--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="es-ES">
 	<head>
-		<meta charset="UTF-8"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+
+    <meta charset="UTF-8"/>
 		<title>CiberSeguridad</title><!--Cabecera del documento-->
 	</head>
 	<body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 		<div id="header">
 			<nav id='menu'>
         <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
@@ -51,16 +57,33 @@
 		</div>
 
 		<div id="logeo" class="logeo">
-      <br>
-      <form>
-        <input type="text" placeholder="Ingresa tu usuario">
-        <br>
-        <input type="password" placeholder="Ingresa tu contraseña">
-        <br>
-        <button type="submit">Login</button>
-      </form>
-    </div>
+      <div class="registro">
+        <form>
+          <div class="form-group">
+            <input type="text" placeholder="Ingresa tu usuario">
+          </div>
+          <div class="form-group">
+            <input type="password" placeholder="Ingresa tu contraseña">
+          </div>
+          <div id="linea">
+            <div id="derecha">
+              <button type="submit" class="btn btn-success">Login</button>
+            </div>
 
+            <div id="izquierda">
+              <a href="./registro"><button type="button" class="btn btn-success">Registro</button></a>
+            </div>
+          </div>
+            <!--<ul class="botonera" width=100%>
+              <li> <button type="submit" class="btn btn-success">Login</button></li>
+              &nbsp;
+              <li><a href="./registro"><button type="button" class="btn btn-success">Registro</button></a></li>
+            </ul>-->
+
+        </form>
+      </div>
+      <br>
+    </div>
 		<div id="Footer">
 			<p class="centrado">&copy; 2021</p>
 		</div>
