--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,35 +55,7 @@
 		<div class="Secciones0">
       <router-outlet></router-outlet>
 		</div>
-
-		<div id="logeo" class="logeo">
-      <div class="registro">
-        <form>
-          <div class="form-group">
-            <input type="text" placeholder="Ingresa tu usuario">
-          </div>
-          <div class="form-group">
-            <input type="password" placeholder="Ingresa tu contraseña">
-          </div>
-          <div id="linea">
-            <div id="derecha">
-              <button type="submit" class="btn btn-success">Login</button>
-            </div>
-
-            <div id="izquierda">
-              <a href="./registro"><button type="button" class="btn btn-success">Registro</button></a>
-            </div>
-          </div>
-            <!--<ul class="botonera" width=100%>
-              <li> <button type="submit" class="btn btn-success">Login</button></li>
-              &nbsp;
-              <li><a href="./registro"><button type="button" class="btn btn-success">Registro</button></a></li>
-            </ul>-->
-
-        </form>
-      </div>
-      <br>
-    </div>
+      <app-login></app-login>
 		<div id="Footer">
 			<p class="centrado">&copy; 2021</p>
 		</div>
