--- a/src/app/webs/login/login.component.html
+++ b/src/app/webs/login/login.component.html
@@ -1,5 +1,5 @@
 <div id="logeo" class="logeo">
-  <div>
+  <div *ngIf="!token">
     <h1>{{page_title}}</h1>
     <div class="centrado3">
       <div class="alert alert-success" *ngIf="status2=='success'">
@@ -38,5 +38,7 @@
       </form>
     </div>
   </div>
-  <br>
+  <div *ngIf="token">
+    <h3>Bienvenido {{identity.unombre}}</h3>
+  </div>
 </div>
